2005-10-13

	* libsylph/folder.[ch]
	  src/prefs_folder_item.c
	  src/folderview.c: enabled the property of the top folder.
	* src/prefs_common_dialog.c: modified the text of key binding dialog.

2005-10-13

	* libsylph/imap.c: imap_cmd_ok(): fixed parsing of literal data (skip
	  quotes).

2005-10-12

	* libsylph/recv.c: recv_bytes(): null-terminate the received data
	  in case it's a string.
	  libsylph/imap.c: imap_cmd_ok(): also log literal strings.

2005-10-12

	* src/alertpanel.c: win32: make dialog in front on focus out.

2005-10-12

	* src/main.c: default_log_func(): fixed prefix on G_LOG_LEVEL_WARNING.

2005-10-12

	* libsylph/imap.c: imap_cmd_ok(): fixed parsing of literal data.

2005-10-12

	* src/summaryview.c: brought back 'Crate filter rule' in the context
	  menu.

2005-10-11

	* src/prefs_folder_item.c: fixed the label "Type" not aligned to right.

2005-10-11

	* libsylph/utils.[ch]
	  src/main.c: output g_log() messages to the log window and log file.
	* configure.in: disabled console window on win32.

2005-10-11

	* src/folderview.c: folderview_drag_motion_cb(): win32: reset
	  context->actions if modifier key is not pressed (fixed DnD action
	  becoming copy by default).

2005-10-10

	* libsylph/utils.c
	  libsylph/procheader.c: fixed a bug that caused crashes on receive
	  if Date: header has abnormal time.

2005-10-07

	* libsylph/recv.[ch]
	  libsylph/imap.c: imap_cmd_ok(): support literals in response
	  (fixed out of sync when literals appeared).

2005-10-06

	* libsylph/codeconv.c:
	  conv_filename_from_utf8(), conv_filename_to_utf8(): put an
	  assertion.

2005-10-06

	* libsylph/utils.c: don't define _s_tempnam() on Unix.
	* src/prefs_folder_item.c: added file system path info.

2005-10-06

	* libsylph/utils.c: get_rc_dir(): win32: use environmental variable
	  APPDATA.
	* libsylph/prefs.c: prefs_set_default()
	  src/prefs_ui.c: prefs_set_dialog_to_default(): win32: don't convert