@@ -1,5 +1,11 @@
 2005-10-13
 
+	* libsylph/utils.[ch]
+	  src/mimeview.c: win32: use ShellExecute() to launch attachments, and
+	  warn on launching an executable file.
+
+2005-10-13
+
 	* libsylph/folder.[ch]
 	  src/prefs_folder_item.c
 	  src/folderview.c: enabled the property of the top folder.
